compiler/lume_hir/src/snapshots/lume_hir__lower__tests__literal_snapshots@int_oct_negative.snap
---
source: compiler/lume_hir/src/lower.rs
description: "-0o125"
---
[
    Statement {
        id: 0,
        kind: Expression(
            Expression {
                id: 5871781006564002453,
                location: <internal>:1:6,
                kind: Literal(
                    Literal {
                        id: 5871781006564002453,
                        location: <internal>:1:6,
                        kind: Int(
                            IntLiteral {
                                id: 5871781006564002453,
                                value: -85,
                                kind: I32,
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:1:6,
    },
]
