compiler/lume_hir/src/snapshots/lume_hir__lower__tests__literal_snapshots@string_content.snap
---
source: compiler/lume_hir/src/lower.rs
description: "\"string\""
---
[
    Statement {
        id: 0,
        kind: Expression(
            Expression {
                id: 5871781006564002453,
                location: <internal>:0:8,
                kind: Literal(
                    Literal {
                        id: 5871781006564002453,
                        location: <internal>:0:8,
                        kind: String(
                            StringLiteral {
                                id: 5871781006564002453,
                                value: "string",
                            },
                        ),
                    },
                ),
            },
        ),
        location: <internal>:0:8,
    },
]
