compiler/lume_hir/src/snapshots/lume_hir__lower__tests__literal_snapshots@string_empty.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"\\\"\\\"\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: foo,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: void,
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: Expression(
                                Expression {
                                    id: 5871781006564002453,
                                    location: <internal>:19:21,
                                    kind: Literal(
                                        Literal {
                                            id: 5871781006564002453,
                                            location: <internal>:19:21,
                                            kind: String(
                                                StringLiteral {
                                                    id: 5871781006564002453,
                                                    value: "",
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ),
                            location: <internal>:19:21,
                        },
                    ],
                    location: <internal>:17:23,
                },
                location: <internal>:0:23,
            },
        ),
    },
    statements: {
        0: Statement {
            id: 0,
            kind: Expression(
                Expression {
                    id: 5871781006564002453,
                    location: <internal>:19:21,
                    kind: Literal(
                        Literal {
                            id: 5871781006564002453,
                            location: <internal>:19:21,
                            kind: String(
                                StringLiteral {
                                    id: 5871781006564002453,
                                    value: "",
                                },
                            ),
                        },
                    ),
                },
            ),
            location: <internal>:19:21,
        },
    },
    expressions: {
        5871781006564002453: Expression {
            id: 5871781006564002453,
            location: <internal>:19:21,
            kind: Literal(
                Literal {
                    id: 5871781006564002453,
                    location: <internal>:19:21,
                    kind: String(
                        StringLiteral {
                            id: 5871781006564002453,
                            value: "",
                        },
                    ),
                },
            ),
        },
    },
}
