compiler/lume_hir/src/snapshots/lume_hir__lower__tests__loop_snapshots@inf_loop_break.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"loop { break; }\")"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: 'foo',
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: 'void',
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: InfiniteLoop(
                                InfiniteLoop {
                                    id: 0,
                                    block: Block {
                                        statements: [
                                            Statement {
                                                id: 5871781006564002453,
                                                kind: Break(
                                                    Break {
                                                        id: 5871781006564002453,
                                                    },
                                                ),
                                                location: <internal>:26:32,
                                            },
                                        ],
                                        location: <internal>:24:34,
                                    },
                                    location: <internal>:19:34,
                                },
                            ),
                            location: <internal>:19:34,
                        },
                    ],
                    location: <internal>:17:36,
                },
                location: <internal>:0:36,
            },
        ),
    },
    statements: {
        5871781006564002453: Statement {
            id: 5871781006564002453,
            kind: Break(
                Break {
                    id: 5871781006564002453,
                },
            ),
            location: <internal>:26:32,
        },
        0: Statement {
            id: 0,
            kind: InfiniteLoop(
                InfiniteLoop {
                    id: 0,
                    block: Block {
                        statements: [
                            Statement {
                                id: 5871781006564002453,
                                kind: Break(
                                    Break {
                                        id: 5871781006564002453,
                                    },
                                ),
                                location: <internal>:26:32,
                            },
                        ],
                        location: <internal>:24:34,
                    },
                    location: <internal>:19:34,
                },
            ),
            location: <internal>:19:34,
        },
    },
    expressions: {},
}
