compiler/lume_hir/src/snapshots/lume_hir__lower__tests__loop_snapshots@inf_loop_continue.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"loop { continue; }\").unwrap()"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: foo,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: void,
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: InfiniteLoop(
                                InfiniteLoop {
                                    id: 0,
                                    block: Block {
                                        statements: [
                                            Statement {
                                                id: 5871781006564002453,
                                                kind: Continue(
                                                    Continue {
                                                        id: 5871781006564002453,
                                                    },
                                                ),
                                                location: <internal>:26:35,
                                            },
                                        ],
                                        location: <internal>:24:37,
                                    },
                                    location: <internal>:19:37,
                                },
                            ),
                            location: <internal>:19:37,
                        },
                    ],
                    location: <internal>:17:39,
                },
                location: <internal>:0:39,
            },
        ),
    },
    statements: {
        5871781006564002453: Statement {
            id: 5871781006564002453,
            kind: Continue(
                Continue {
                    id: 5871781006564002453,
                },
            ),
            location: <internal>:26:35,
        },
        0: Statement {
            id: 0,
            kind: InfiniteLoop(
                InfiniteLoop {
                    id: 0,
                    block: Block {
                        statements: [
                            Statement {
                                id: 5871781006564002453,
                                kind: Continue(
                                    Continue {
                                        id: 5871781006564002453,
                                    },
                                ),
                                location: <internal>:26:35,
                            },
                        ],
                        location: <internal>:24:37,
                    },
                    location: <internal>:19:37,
                },
            ),
            location: <internal>:19:37,
        },
    },
    expressions: {},
}
