compiler/lume_hir/src/snapshots/lume_hir__lower__tests__loop_snapshots@inf_loop_empty.snap
---
source: compiler/lume_hir/src/lower.rs
expression: "lower_expr(\"loop { }\")"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        8195533856448846917: Function(
            FunctionDefinition {
                id: 8195533856448846917,
                func_id: None,
                visibility: Private,
                name: 'foo',
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: 'void',
                        type_params: [],
                        location: <internal>:12:16,
                    },
                ),
                block: Block {
                    statements: [
                        Statement {
                            id: 0,
                            kind: InfiniteLoop(
                                InfiniteLoop {
                                    id: 0,
                                    block: Block {
                                        statements: [],
                                        location: <internal>:24:27,
                                    },
                                    location: <internal>:19:27,
                                },
                            ),
                            location: <internal>:19:27,
                        },
                    ],
                    location: <internal>:17:29,
                },
                location: <internal>:0:29,
            },
        ),
    },
    statements: {
        0: Statement {
            id: 0,
            kind: InfiniteLoop(
                InfiniteLoop {
                    id: 0,
                    block: Block {
                        statements: [],
                        location: <internal>:24:27,
                    },
                    location: <internal>:19:27,
                },
            ),
            location: <internal>:19:27,
        },
    },
    expressions: {},
}
