compiler/lume_hir/src/snapshots/lume_hir__lower__tests__loop_snapshots@inf_loop_statement.snap
---
source: compiler/lume_hir/src/lower.rs
description: "loop { let a = 0; }"
---
[
    Statement {
        id: 0,
        kind: InfiniteLoop(
            InfiniteLoop {
                id: 0,
                block: Block {
                    statements: [
                        Statement {
                            id: 5871781006564002453,
                            kind: Variable(
                                VariableDeclaration {
                                    id: 5871781006564002453,
                                    name: Identifier {
                                        name: "a",
                                        location: <internal>:11:12,
                                    },
                                    declared_type: None,
                                    value: Expression {
                                        id: 11743562013128004906,
                                        location: <internal>:15:16,
                                        kind: Literal(
                                            Literal {
                                                id: 11743562013128004906,
                                                location: <internal>:15:16,
                                                kind: Int(
                                                    IntLiteral {
                                                        id: 11743562013128004906,
                                                        value: 0,
                                                        kind: I32,
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                },
                            ),
                            location: <internal>:7:17,
                        },
                    ],
                    location: <internal>:5:19,
                },
                location: <internal>:0:19,
            },
        ),
        location: <internal>:0:19,
    },
]
