compiler/lume_hir/src/snapshots/lume_hir__lower__tests__loop_snapshots@iter_loop_break.snap
---
source: compiler/lume_hir/src/lower.rs
description: "for pattern in [1, 2, 3] { break; }"
---
[
    Statement {
        id: 0,
        kind: IteratorLoop(
            IteratorLoop {
                id: 0,
                collection: Expression {
                    id: 5871781006564002453,
                    location: <internal>:15:16,
                    kind: StaticCall(
                        StaticCall {
                            id: 5871781006564002453,
                            name: std::Array::with_capacity,
                            type_arguments: [
                                Implicit {
                                    location: <internal>:0:0,
                                },
                            ],
                            arguments: [
                                Expression {
                                    id: 11743562013128004906,
                                    location: <internal>:0:0,
                                    kind: Literal(
                                        Literal {
                                            id: 17615343019692007359,
                                            location: <internal>:0:0,
                                            kind: Int(
                                                IntLiteral {
                                                    id: 5040379952546458196,
                                                    value: 3,
                                                    kind: U64,
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
                block: Block {
                    statements: [
                        Statement {
                            id: 10912160959110460649,
                            kind: Break(
                                Break {
                                    id: 10912160959110460649,
                                },
                            ),
                            location: <internal>:27:33,
                        },
                    ],
                    location: <internal>:25:35,
                },
                location: <internal>:0:35,
            },
        ),
        location: <internal>:0:35,
    },
]
